--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue3-ssr-default",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "dev": "node server.js",
     "serve": "node server-prod.js",
@@ -13,11 +12,6 @@
     "format": "prettier --write src/",
     "prepare": "husky install",
     "commit": "git add . & git-cz"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    }
   },
   "dependencies": {
     "@vue/server-renderer": "^3.3.4",
@@ -39,9 +33,8 @@
     "@vitejs/plugin-vue": "^2.3.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "commitizen": "^4.2.4",
-    "commitlint-config-cz": "^0.13.3",
     "cz-conventional-changelog": "^3.3.0",
-    "cz-customizable": "^6.3.0",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -53,5 +46,13 @@
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "cz.config.js"
+    }
   }
 }
